<resources>
    <string name="app_name">Pi Sprinkler</string>
    <string name="main_menu">Main Menu</string>
    <string name="summary">Summary</string>
    <string name="programs">Programs</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="zones">Zones</string>
    <string name="pin">Pin</string>
    <string name="type">Type</string>
    <string name="gpio">GPIO</string>
    <string name="gpio_pin">GPIO Pin</string>
    <string name="delete_zone">Delete zone?</string>
    <string name="delete_step">Delete step?</string>
    <string name="add">Add</string>
    <string name="start_time">Start Time</string>
    <string name="interval">Interval</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="zone">Zone</string>
    <string name="time">Time</string>
    <string name="percent">Percent</string>
    <string name="minutes">Minutes</string>
    <string name="min">Min</string>
    <string name="per">%</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="device">Device Settings</string>
    <string name="loading">…loading</string>
    <string name="url">Device IP</string>
    <string name="history">History</string>
    <string name="temperature">Temperature</string>
    <string name="active">Active</string>
    <string name="delay">Delay</string>
    <string name="current">Current</string>

    <string-array name="zone_types">
        <item>FIXED</item>
        <item>ROTARY HE</item>
        <item>ROTOR</item>
    </string-array>
</resources>