<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/zone_item_margin">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:textSize="@dimen/text"
        android:gravity="center"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:text="@string/start_time"
        app:layout_constraintTop_toTopOf="@id/ib_run_time"
        app:layout_constraintBottom_toBottomOf="@id/ib_run_time"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_run_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="06:30 AM"
        android:textSize="@dimen/text"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/tv1"
        app:layout_constraintBottom_toBottomOf="@id/tv1"
        app:layout_constraintStart_toEndOf="@id/tv1"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ib_run_time"
        android:src="@drawable/ic_baseline_access_time_24"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toEndOf="@id/tv_run_time"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:gravity="center"
        android:text="@string/interval"
        app:layout_constraintTop_toTopOf="@id/et_interval"
        app:layout_constraintBottom_toBottomOf="@id/et_interval"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/text"
        android:minWidth="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toStartOf="@id/tv_run_time"/>
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textAllCaps="true"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/et_interval"
        app:layout_constraintBottom_toBottomOf="@id/et_interval"
        app:layout_constraintStart_toEndOf="@id/et_interval"/>

</androidx.constraintlayout.widget.ConstraintLayout>