<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="10dp">
    <LinearLayout
        android:id="@+id/ll_step_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/step_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_step_24"
            app:tint="?attr/colorSecondary"/>
        <TextView
            android:id="@+id/step_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text"
            android:text="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/step_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone"
        android:textSize="@dimen/text"
        app:layout_constraintEnd_toEndOf="@id/step_percent"
        app:layout_constraintTop_toTopOf="@id/step_zone_spinner"
        app:layout_constraintBottom_toBottomOf="@id/step_zone_spinner"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_zone_spinner"
        app:layout_constraintTop_toBottomOf="@id/ll_step_id"
        app:layout_constraintStart_toStartOf="@id/et_percent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_time"
        android:text="@string/time"
        android:textSize="@dimen/text"
        app:layout_constraintEnd_toEndOf="@id/step_percent"
        app:layout_constraintTop_toTopOf="@id/et_time"
        app:layout_constraintBottom_toBottomOf="@id/et_time"/>
    <EditText
        android:id="@+id/et_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:hint="0"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/et_percent"
        app:layout_constraintTop_toBottomOf="@id/step_zone_spinner"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_min"
        android:text="@string/min"
        android:textAllCaps="true"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toEndOf="@id/et_time"
        app:layout_constraintTop_toTopOf="@id/et_time"
        app:layout_constraintBottom_toBottomOf="@id/et_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_percent"
        android:text="@string/percent"
        android:textSize="@dimen/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_percent"
        app:layout_constraintBottom_toBottomOf="@id/et_percent"/>
    <EditText
        android:id="@+id/et_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:layout_marginStart="10dp"
        android:hint="100"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/step_percent"
        app:layout_constraintTop_toBottomOf="@id/et_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_per"
        android:text="@string/per"
        android:textAllCaps="true"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toEndOf="@id/et_percent"
        app:layout_constraintTop_toTopOf="@id/et_percent"
        app:layout_constraintBottom_toBottomOf="@id/et_percent"/>

</androidx.constraintlayout.widget.ConstraintLayout>