<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:text="@string/device"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_ip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_ip"
            app:layout_constraintBottom_toBottomOf="@id/et_ip"
            android:text="@string/ip"/>
        <EditText
            android:id="@+id/et_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/large_text"
            android:minWidth="140dp"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintStart_toEndOf="@id/tv_port"
            app:layout_constraintTop_toBottomOf="@id/title"/>
        <TextView
            android:id="@+id/tv_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text"
            app:layout_constraintTop_toTopOf="@id/et_port"
            app:layout_constraintBottom_toBottomOf="@id/et_port"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/port"/>
        <EditText
            android:id="@+id/et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/large_text"
            android:inputType="number"
            android:minWidth="80dp"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintStart_toEndOf="@id/tv_port"
            app:layout_constraintTop_toBottomOf="@id/et_ip"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>