<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rnfive.htfu.pisprinkler.MainActivityPiSprinkler"
    android:id="@+id/main_layout">


    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:tint="@color/blue"
            android:src="@drawable/alert"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:text="Delay until 2021.01.01 00:00:00"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/ib_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_status"
        app:layout_constraintBottom_toBottomOf="@id/ll_status"
        android:visibility="gone"/>
    <ImageButton
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_refresh_24"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/ll_zone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingBottom="2dp"
        android:layout_weight="2"
        android:gravity="start"
        android:textColor="@color/off_white"
        android:text="@string/zones"
        android:background="?attr/colorAccent"
        android:textSize="@dimen/med_text"
        app:layout_constraintTop_toBottomOf="@id/ll_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/zone_flex_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:justifyContent="flex_start"
        app:flexWrap="wrap"
        app:layout_constraintTop_toBottomOf="@id/ll_zone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/ll_program_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingBottom="2dp"
        android:layout_weight="2"
        android:gravity="start"
        android:textColor="@color/off_white"
        android:text="@string/programs"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/med_text"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/zone_flex_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/ll_program_label">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_dots"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_current_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingBottom="2dp"
        android:layout_weight="2"
        android:gravity="start"
        android:textColor="@color/off_white"
        android:text="@string/current"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/med_text"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/cl_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_current_prog"
        android:paddingTop="5dp"
        android:textSize="@dimen/text"
        android:paddingLeft="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_current_title"
        app:layout_constraintStart_toEndOf="@id/tv_current"
        app:layout_constraintTop_toTopOf="@id/tv_current"
        app:layout_constraintBottom_toBottomOf="@id/tv_current"/>


    <TextView
        android:id="@+id/ll_temp_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingBottom="2dp"
        android:layout_weight="2"
        android:gravity="start"
        android:textColor="@color/off_white"
        android:text="@string/temperature"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/med_text"
        android:background="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/cl_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:minWidth="150dp"
        android:id="@+id/tv_current"
        android:paddingBottom="2dp"
        android:paddingRight="15dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/med_text"
        app:layout_constraintTop_toTopOf="@id/ll_temp_title"
        app:layout_constraintBottom_toBottomOf="@id/ll_temp_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/ll_temp_title"
        android:contentDescription="@string/history" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:gravity="start"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ip_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history" />

    <LinearLayout
        android:id="@+id/ip_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_baseline_link_24"/>
        <TextView
            android:id="@+id/ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="192.168.0.152"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text"
            android:textColor="@color/gray"
            android:layout_marginEnd="10dp"/>
        <ImageButton
            android:id="@+id/ip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@drawable/rect_ring_r_corner"
            android:backgroundTint="?attr/colorPrimary"
            app:tint="?attr/colorPrimary"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_edit_24"/>
    </LinearLayout>


    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.nambimobile.widgets.efab.ExpandableFab
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="@color/white"
            android:scaleType="fitCenter"
            android:background="@drawable/circle"
            app:efab_orientation="portrait"/>
        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_zone_24"
            android:onClick="addZone"
            app:fab_orientation="portrait"/>
        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_program_24"
            app:fab_orientation="portrait"
            android:onClick="addProgram"/>
        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delay"
            app:fab_orientation="portrait"
            android:onClick="setDelay"/>

    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>